Added a timeout to fix everything
Typical

--- a/src/content/player.html
+++ b/src/content/player.html
@@ -21,7 +21,7 @@
     <div style="display: flex;  flex-direction: column; justify-content: center; min-height: 5em;">
       <audio id="audio" preload="auto"></audio>
       <select id="tracks" disabled="true">
-        <option selected="true">No tracks<option>
+        <option selected="true">No tracks</option>
       </select>
       <button id="play-button" type="button" disabled="true" onclick="play()">Play</button>
     </div>
